# model_server

./: .classpath  .env  .factorypath  .gitignore  .gitmodules  .project  .test_env  .uvrc  Dockerfile  README.md  aisuite  build-docker.sh  build.gradle.kts  docker-compose.yml  drools_py  gradle.properties  metadata_extractor  model-server.http  pyproject.toml  python_di  requirements-docker.txt  requirements.txt  setup.py
.run/: model_servert tests.run.xml
docker/: .gitignore  Dockerfile  after-build.sh  application-docker-template.yml  application-docker.yml  build-docker.sh  build.sh  docker-compose.yml  docker.env  requirements.txt  run.sh  test-build-run.sh
docker/drools_py_copied/accumulate_gradients/: accumulate_gradients.py  accumulate_gradients_types.py
docker/drools_py_copied/arrow/: arrow_serializer.py
docker/drools_py_copied/attn/: attn.py  attn_kernel.py  attn_kernel_function.py  attn_post_proba.py  base_fourier_attn_kernel.py  custom_proba_multi_head_attn.py  moe_attn_kernel.py
docker/drools_py_copied/batch_split/: split_batch_emit.py  split_seq_emit.py
docker/drools_py_copied/classification_models/: classify_spam.py
docker/drools_py_copied/configs/: config_augmentation.py  config_gen.py  context.py
docker/drools_py_copied/equals/: deep_equals.py
docker/drools_py_copied/ffn/: dense_ffn.py  feed_forward.py  multiple_fault_training.py  stepping_embedder.py
docker/drools_py_copied/gradient_clipping/: gradient_clipping.py
docker/pasta/: .pre-commit-config.yaml
resources/: application-test.yml  application.yml
test/embedding_model/: test_base_embedding_model.py  test_base_embedding_model_test.py
test/generative_model/: test_generative_model_endpoint_test.py
test/train_conn_tests/: ai_suite_chat_endpoint_test.py  gemini_embedding_model_endpoint_test.py  gemini_model_endpoint_test.py  server_runner_test.py  test_ai_suite_chat_endpoint_test.py  test_ai_suite_embedding_model_endpoint_test.py  test_ai_suite_rerank_endpoint_test.py  test_ai_suite_validation_endpoint_test.py  test_fixtures.py  test_santizez_json_test.py  test_server_runner_test.py  test_walk.py
(+157 files in other folders)
