[project]
name = "model_server"
version = "1.0.0"
description = "Python library for model serving"

dependencies = [
    "entropy==0.1.5",
    "attrs==23.1.0",
    "injector==0.22.0",
    "kafka_python==2.0.2",
    "networkx==3.1",
    "numpy==1.24.3",
    "pydantic==2.11.3",
    "python-dotenv==1.0.0",
    "scikit_learn==1.2.2",
    "scipy==1.11.4",
    "setuptools==68.0.0",
    "SQLAlchemy==2.0.19",
    "pyarrow==20.0.0",
    "torch==2.7.0",
    "torch_geometric==2.6.1",
    "transformers==4.48.0",
    "typing_extensions==4.12.2",
    "Flask==3.0.3",
    "rsocket==0.4.15",
    "six==1.16.0",
    "fonttools==4.53.1",
    "google-ai-generativelanguage==0.6.10",
    "google-api-core==2.20.0",
    "google-api-python-client==2.147.0",
    "google-auth==2.36.0",
    "google-auth-httplib2==0.2.0",
    "google-auth-oauthlib==1.0.0",
    "google-cloud-aiplatform==1.71.1",
    "google-cloud-bigquery==3.27.0",
    "google-cloud-core==2.4.1",
    "google-cloud-discoveryengine==0.13.6",
    "google-cloud-resource-manager==1.13.1",
    "google-cloud-storage==2.18.2",
    "google-crc32c==1.6.0",
    "google-generativeai==0.8.2",
    "google-pasta==0.2.0",
    "google-resumable-media==2.7.2",
    "googleapis-common-protos==1.65.0",
    "rerankers==0.8.0",
    "langchain==0.3.24",
    "langchain-mcp-adapters==0.0.9",
    "langgraph==0.3.34",
    "langchain-ollama==0.3.2",
    "aisuite",
    "python_di",
    "python_util",
    "drools_py"
]

requires-python = ">=3.10"

[tool.uv.sources]
drools_py = { path = "../drools_py", editable = true }
python_di = { path = "../python_di", editable = true }
python_util = { path = "../python_util", editable = true }
aisuite = { path = "../../ml/integrations/aisuite", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools]
packages = ["model_server"]
package-dir = {"" = "src"}

[project.scripts]
run-model-server = "model_server.main.model_server_main:ModelServerApplication"
test-model-server = "model_server.test.test_model_server:main"